--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body, #root {
 body {
   font: 14px;
   font-family: sans-serif;
-  background-color: #efefef;
+  background-color: #EFEFEF;
 }
 a {
   text-decoration: none;
