--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -66,6 +66,11 @@ table td .badge {
     border-radius: 3px;
     color: #fff;
 }
+.dashboard span {
+    padding: 2em 0;
+    font-size: 1.2em;
+    font-weight: 600;
+}
 
 
 @media screen and (max-width: 600px) {
